added some js and linked to html page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <body>
     <h1>Git Practice</h1>
     <p>This is to practice checkout reset and revert</p>
+    <p id="js"></p>
+    <script src="./index.js"></script>
   </body>
 </html>
