--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p id="js"></p>
     <script src="./index.js"></script>
     <p>This is to practice checkout reset and revert</p>
+    <p>This code is to be removed</p>
   </body>
 </html>
