added another p from js

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <script src="./index.js"></script>
     <p>This is to practice checkout reset and revert</p>
     <p>This code is to be removed</p>
+    <p>Checking the diff</p>
+    <p id="blue"></p>
   </body>
 </html>
