--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="./index.js"></script>
     <p>This is to practice checkout reset and revert</p>
     <p>This code is to be removed</p>
+    <p>An edit from github.com</p>
   </body>
 </html>
