--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <p>Checking the diff</p>
     <p id="blue"></p>
     <p>An edit from github.com</p>
+    <p>remote commit</p>
   </body>
 </html>
