change to check fetch-diff

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <p id="blue"></p>
     <p>An edit from github.com</p>
     <p>remote commit</p>
+    <p>checking the diff<p>
   </body>
 </html>
