made a change despite remote

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <p id="blue"></p>
     <p>An edit from github.com</p>
     <p>remote commit</p>
-    <p>checking the diff<p>
+    <p>checking the diff</p>
+    <p>make a local change despite remote copy</p>
   </body>
 </html>
