add p on branch 1

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <p>An edit from github.com</p>
     <p>remote commit</p>
     <p>make a local change despite remote copy</p>
+    <p>addition on branch 1</p>
   </body>
 </html>
